# PiWifi

./: API_ENHANCEMENT_SUMMARY.md  API_QUICK_REFERENCE.md  COMPLETE_API_RS.md  COMPLETE_ENHANCED_API_RS.txt  Cargo.toml  DEPLOYMENT.md  DHCP_OPTIONS.md  EDGE_ROUTER_GUIDE.md  ENHANCED_API_DOCS.md  ENHANCEMENT_INDEX.md  FEATURES_ADDED.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NEW_FEATURES.md  PROJECT_SUMMARY.txt  QOL_FEATURES.md  QUICKSTART.md  README.md  SETUP.md  SUMMARY.md  WEB_UI.md  WORK_COMPLETED.txt  deploy.sh  piwifi.service
src/: api.rs  auth.rs  devices.rs  firewall.rs  history.rs  lib.rs  main.rs  network.rs  pty.rs  server.rs  system.rs  wifi.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte
web/src/components/: BandwidthPanel.svelte  ClientsPanel.svelte  ConfigPanel.svelte  ConnectionHistoryPanel.svelte  DHCPPanel.svelte  Dashboard.svelte  DashboardSummary.svelte  DeviceManagementPanel.svelte  DiagnosticsPanel.svelte  FirewallPanel.svelte  LogViewerPanel.svelte  Login.svelte  NetworkPanel.svelte  SpeedTestPanel.svelte  TerminalPanel.svelte  WakeOnLanPanel.svelte  WiFiPanel.svelte
